[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/ExtraInfoPanelComponents/ExtraInfoPanel_BodyBackground.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/ExtraInfoPanelComponents/ExtraInfoPanel_TopDownBorder.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/ExtraInfoPanelComponents/ExtraInfoPanel.gd" type="Script" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/ExtraInfoPanelComponents/DescriptionPanel/DescriptionPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/ExtraInfoPanelComponents/SelfIngredientPanel/SelfIngredientPanel.tscn" type="PackedScene" id=5]

[node name="ExtraInfoPanel" type="MarginContainer"]
margin_right = 150.0
margin_bottom = 24.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 138.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
visible = false
margin_right = 150.0
margin_bottom = 2.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Body" type="MarginContainer" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 134.0
mouse_filter = 2

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/Body"]
margin_right = 150.0
margin_bottom = 134.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="VBoxContainer/Body"]
margin_right = 150.0
margin_bottom = 134.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 20
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Body/ContentMarginer"]
margin_left = 4.0
margin_top = 20.0
margin_right = 146.0
margin_bottom = 132.0
custom_constants/separation = 8

[node name="DescriptionPanel" parent="VBoxContainer/Body/ContentMarginer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 142.0
size_flags_vertical = 1

[node name="SelfIngredientPanel" parent="VBoxContainer/Body/ContentMarginer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 40.0
margin_right = 142.0
margin_bottom = 112.0

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 150.0
margin_bottom = 136.0
mouse_filter = 2
texture = ExtResource( 2 )
